# gmail-agent-assistant

./: .coverage  .gitignore  ACTIVE_LEARNING_RESEARCH.md  CLAUDE.md  Dockerfile  NEXT_STEPS.md  README.md  categorization_hierarchy.md  data_flow_state.md  docker-compose.test.yml  gmail_agent_technical_summary.md  gmail_inbox_management_system.md  langgraph_workflow.md  pyproject.toml  requirements.txt
config/: vip_senders.yaml
infrastructure/: .terraform.lock.hcl  CLAUDE.md  README.md  REFERENCE.md  bastion.tf  cloudrun.tf  database.tf  database_schema.tf  gcp_architecture.md  monitoring.tf  network.tf  outputs.tf  registry.tf  scheduler.tf  secrets.tf  tasks.tf  terraform.tfvars.example  terraform_deployment.md  tfplan  variables.tf  versions.tf
scripts/: deploy-infrastructure.sh  migrate_add_batch_jobs.sql  process_inbox.py  test_batch.py
scripts/migrations/: 002_phase2_tables.sql
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  calendar.py  categorization.py  importance.py  unsubscribe.py
src/cli/: __init__.py  approval.py  unsubscribe.py
src/models/: __init__.py  base.py  batch_job.py  calendar_event.py  checkpoint.py  email.py  feedback.py  importance_rule.py  processing_log.py  unsubscribe_queue.py  vip_sender.py
src/services/: __init__.py  anthropic_client.py  batch_processor.py  cloud_tasks.py  gmail_client.py  google_calendar.py
src/workflows/: __init__.py  email_processor.py  state.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_approval_cli.py
tests/integration/: __init__.py  test_api_endpoints.py
(+8 files in other folders)
